# robotframework-openapitools

./: .gitignore  pyproject.toml  robot.toml  tasks.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: on-push.yml
docs/: README.md  advanced_use.md  documentation.html  driver.md  index.html  libcore.md  openapi_libcore.html  openapidriver.html  releases.md
docs/code_highlighting/: prism.css  prism.js
docs/release_notes/: 1.0.0.md  1.0.1.md  1.0.2.md
src/OpenApiDriver/: __init__.py  openapi_executors.py  openapi_reader.py  openapidriver.libspec  openapidriver.py
src/OpenApiLibCore/: __init__.py  annotations.py  data_generation.py  data_invalidation.py  dto_base.py  dto_utils.py  localized_faker.py  models.py  oas_cache.py  openapi_libcore.libspec  openapi_libcore.py  parameter_utils.py  path_functions.py  path_invalidation.py  protocols.py  request_data.py  resource_relations.py  validation.py  value_utils.py
src/OpenApiLibCore/data_constraints/: dto_base.py
src/OpenApiLibCore/data_generation/: __init__.py  body_data_generation.py  data_generation_core.py  data_invalidation.py  localized_faker.py  value_utils.py
src/OpenApiLibCore/data_relations/: relations_base.py
src/OpenApiLibCore/keyword_logic/: path_functions.py  path_invalidation.py  resource_relations.py  validation.py
src/OpenApiLibCore/models/: __init__.py  oas_models.py  request_data.py  resource_relations.py
src/OpenApiLibCore/utils/: id_mapping.py  oas_cache.py  parameter_utils.py
src/openapi_libgen/: __init__.py  command_line.py  generator.py  parsing_utils.py  spec_parser.py
src/openapi_libgen/templates/: __init__.jinja  library.jinja
src/openapitools_docs/: docstrings.py  documentation_generator.py
src/openapitools_docs/templates/: documentation.jinja
src/roboswag/: __init__.py  auth.py  cli.py  core.py  logger.py
src/roboswag/generate/: generate.py
src/roboswag/generate/models/: api.py  definition.py  endpoint.py  parameter.py
tests/: variables.py
tests/driver/suites/: load_from_url.robot  load_json.robot  load_yaml.robot  test_endpoint_exceptions.robot  test_forbidden_and_test_unauthorized_raise_on_unsecured_api.robot  test_invalid_url_exceptions.robot  test_mismatching_schemas.robot  test_with_altered_schema.robot
tests/files/: altered_openapi.json  mismatched_openapi.json  nullable_schema_variations.json  request_data_variations.json  request_data_variations_3.0.json  request_data_variations_3.1.json  schema_with_allof.yaml  schema_with_allof_and_nullable.yaml  schema_with_parameter_name_duplication.yaml  testserver_openapi.json
tests/libcore/suites/: test_auth_headers_and_token.robot  test_authorized_request.robot  test_default_id_property_name.robot  test_ensure_in_use.robot  test_faker_locale.robot  test_get_ids_for_endpoint.robot  test_get_invalid_json_data.robot  test_get_invalidated_parameters.robot  test_get_invalidated_url.robot  test_get_json_data_for_dto_class.robot  test_get_json_data_with_conflict.robot  test_get_parameterized_endpoint_from_url.robot  test_get_request_data.robot  test_get_valid_id_for_endpoint.robot  test_get_valid_url.robot  test_readonly.robot  test_request_data_class.robot  test_request_values.robot  test_schema_variations.robot  test_validate_response.robot
tests/libcore/unittests/: test_can_be_invalidated.py  test_dto_utils.py  test_get_request_data.py  test_get_safe_key.py  test_get_valid_value.py  test_get_values_out_of_bounds.py  test_invalid_value_from_const_or_enum.py  test_localized_faker.py  test_mappings.py  test_parameter_utils.py  test_resolve_union_schema.py
tests/libcore/unittests/oas_model/: test_can_be_invalidated.py  test_get_invalid_data.py  test_get_invalid_value.py  test_get_request_data.py  test_get_valid_value.py  test_get_values_out_of_bounds.py  test_handle_nullable.py  test_invalid_value_from_const_or_enum.py  test_resolve_union_schema.py
tests/libcore/unittests/value_utils/: test_get_valid_value.py  test_get_values_out_of_bounds.py  test_invalid_value_from_constraint.py  test_localized_faker.py  test_type_name_mappers.py
tests/libgen/: test_generated_library.robot
tests/libgen/suites/: test_generated_library.robot  test_multiple_libraries.robot  test_other_generated_library.robot
tests/libgen/unittests/: test_parsing_utils.py
tests/roboswag/: utils.py
tests/roboswag/atest/generate/: test_generate.py
tests/roboswag/e2e/basic_auth/: test.robot
tests/roboswag/e2e/custom_id/: test.robot
tests/roboswag/e2e/no_tags/: test.robot
tests/roboswag/validate/: test_validate_schema.py
tests/server/: testserver.py
tests/user_implemented/: EtagListener.py  custom_user_mappings.py
